--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,41 @@ on:
   workflow_dispatch:  # 允许手动触发
 
 jobs:
+  # 生成图标（所有平台共用）
+  generate-icons:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Install Tauri CLI
+        run: npm install -g @tauri-apps/cli
+
+      - name: Install ImageMagick
+        run: sudo apt-get update && sudo apt-get install -y imagemagick
+
+      - name: Generate icons from SVG
+        run: |
+          cd src-tauri/icons
+          # 使用 ImageMagick 将 SVG 转为 PNG
+          convert -background none -density 384 app-icon.svg -resize 1024x1024 icon.png
+          # 回到项目根目录，使用 Tauri CLI 生成全平台图标
+          cd ../..
+          npx @tauri-apps/cli icon src-tauri/icons/icon.png
+
+      - name: Upload icons
+        uses: actions/upload-artifact@v4
+        with:
+          name: icons
+          path: src-tauri/icons/
+          retention-days: 1
+
   release:
+    needs: generate-icons
     permissions:
       contents: write
     strategy:
@@ -23,6 +57,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Download icons
+        uses: actions/download-artifact@v4
+        with:
+          name: icons
+          path: src-tauri/icons/
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
