--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,11 +12,12 @@ tauri-build = { version = "2", features = [] }
 
 [dependencies]
 # Tauri 框架
-tauri = { version = "2", features = [] }
+tauri = { version = "2", features = ["tray-icon"] }
 tauri-plugin-shell = "2"
 tauri-plugin-dialog = "2"
 tauri-plugin-updater = "2"
 tauri-plugin-process = "2"
+tauri-plugin-store = "2"
 
 # 序列化
 serde = { version = "1.0", features = ["derive"] }
