--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,8 @@ tauri-plugin-dialog = "2"
 tauri-plugin-updater = "2"
 tauri-plugin-process = "2"
 tauri-plugin-store = "2"
+tauri-plugin-deep-link = "2"
+tauri-plugin-single-instance = "2"
 
 # 序列化
 serde = { version = "1.0", features = ["derive"] }
@@ -41,6 +43,7 @@ chrono = "0.4"
 
 # URL 解析
 url = "2.5"
+urlencoding = "2.1"
 
 [features]
 default = ["custom-protocol"]
