--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "open-switch"
-version = "1.4.3"
+version = "1.4.5"
 edition = "2021"
 description = "Open Switch工具"
 authors = ["moguw <weiyiding0@gmail.com>"]
@@ -26,10 +26,23 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 # 异步运行时 (只启用需要的 features 加速编译)
-tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
+tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time"] }
 
 # HTTP 客户端 (只启用需要的 features)
-reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
+
+# HTTP 服务器 (代理)
+axum = "0.7"
+tower-http = { version = "0.5", features = ["cors"] }
+
+# 数据库
+rusqlite = { version = "0.31", features = ["bundled"] }
+
+# 精确小数计算
+rust_decimal = "1.34"
+
+# 异步流处理
+futures = "0.3"
 
 # 错误处理
 anyhow = "1.0"
@@ -40,6 +53,9 @@ dirs = "5.0"
 
 # 时间处理
 chrono = "0.4"
+
+# UUID 生成
+uuid = { version = "1.0", features = ["v4"] }
 
 # URL 解析
 url = "2.5"
